--- a/_config.yml
+++ b/_config.yml
@@ -8,42 +8,41 @@ theme: jekyll-theme-chirpy
 # otherwise, the layout language will use the default value of 'en'.
 lang: en
 
-# Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
-timezone:
+# Change to your timezone › 
+timezone: Asia/Kolkata
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Abdur's Blog
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Digital Nomad
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://gaoh19.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: gaoh19
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: AbdurRa91791817
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Abdur Rahman
+  email: aburahman918@gmail.com
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
-
+    - https://x.com/AbdurRa91791817
+    - https://github.com/gaoh19
+    - https://www.linkedin.com/in/abdur-rahman918/
+    - https://datavault.rf.gd
+    
 # Site Verification Settings
 webmaster_verifications:
   google: # fill in your Google verification code
@@ -96,7 +95,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: assets/img/flag.webp
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
